# College-Assignments

Compilers in C++/Compiler for Self Created Language/Phase 1/: CMakeLists.txt  main.cpp
Compilers in C++/Compiler for Self Created Language/Phase 2/: CMakeLists.txt  dump.txt  main.cpp
Data Structures in C++/Treap/: BSTFCI.cpp  BSTFCI.h  CMakeLists.txt  Contact.cpp  Contact.h  ContactManager.cpp  ContactManager.h  List.cpp  List.h  Treap.cpp  Treap.h  indexBuilder.cpp  indexBuilder.h  main.cpp
File Processing in C++/Course Manager/: CMakeLists.txt  Course.cpp  Course.h  main.cpp  prIndex.h
Genetic Algorithms in C++/DNA and RNA Processor/: CMakeLists.txt  CodonsTable.txt  main.cpp  newAss4.cbp  newAss4.depend  newAss4.layout
Genetic Algorithms in C++/DNA and RNA Processor/include/: CodonsTable.h  DNA.h  Protein.h  RNA.h  Sequence.h
Genetic Algorithms in C++/DNA and RNA Processor/src/: CodonsTable.cpp  DNA.cpp  Protein.cpp  RNA.cpp  Sequence.cpp
Genetic Algorithms in C++/Natural Selection Simulation - Chromosome Mutation/: CMakeLists.txt  main.cpp
Graphics in C++/Optimised Drawing of Simple Shapes - Windows Graphics Library/: [CS3_MoustafaKhaled_20170288].txt
Graphics in C++/Optimised Drawing of Simple Shapes in C++/: CMakeLists.txt  main.cpp
Graphics in C++/Simple Car - OpenGL/: CMakeLists.txt  main.cpp
Parallel Processing with MPI in C/Simple Distributed Matrix Operations/: CMakeLists.txt  main.c
Simple Image Processing in C++/Image Filters/: Blur.txt  ass4-bonus (1).cpp  assignment4.cbp  assignment4.depend  assignment4.layout  bmplib.cpp  main.cpp
