cmake_minimum_required(VERSION 3.12)
project(DataStructures_Assignment4_20170288)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructures_Assignment4_20170288 main.cpp BSTFCI.cpp BSTFCI.h indexBuilder.cpp indexBuilder.h List.cpp List.h Contact.cpp Contact.h ContactManager.cpp ContactManager.h Treap.cpp Treap.h)